--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,12 @@
 !/log/.keep
 !/tmp/.keep
 
+# Ignore yarn errors log
 /node_modules
 /yarn-error.log
 
+# Ignore Byebug command history file.
 .byebug_history
+
+# Ignore Spring files.
+/spring/*.pid
